# oakestra

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  version.txt
SKILLS/: README.md  troubleshoot-oakestra.md
addons_engine/: .gitignore  Dockerfile  README.md  addons_engine.py  requirements.txt  start-up.sh
addons_marketplace/: Dockerfile  addons_marketplace.py
cluster_orchestrator/: .docker-compose-amd64-local.yml.swp  .docker-compose-env  .env.template  IDP-docker-compose.yml  README.md  docker-compose-amd64-local.yml  docker-compose-amd64.yml  docker-compose-arm.yml  docker-compose-no-network.yml  docker-compose-v6-addressed.yml  docker-compose-v6-enabled.yml  docker-compose.yml  docker-compose_partly.yml  override-addons.yml  override-custom-service-manager-version.yml  override-gateway.yml  override-images-only.yaml  override-images-only.yml  override-ipv6-addressed.yml  override-ipv6-enabled.yml  override-local-service-manager.yml  override-mosquitto-auth.yml  override-network-host.yml  override-no-addons.yml  override-no-network.yml  override-no-observe.yml  wait-for-it.sh
deployment_helper/: edge-io-helper.sh  wcfg.yaml  wcfg.yaml.old
evaluation/: containerusage.sh  cpu.sh  cpumem.test1.csv  cpumem.test2.csv  cpumem.test4.csv  cpumemoryusage.csv  data_norm.ipynb  deployment.test1.csv  deployment.test2.csv  deployment.test3.csv  deployment1.csv  (+5 more)
libraries/oakestra_utils_library/: README.md  pyproject.toml
libraries/oakestra_utils_library/oakestra_utils/types/: common.py  statuses.py
(+981 files in other folders)
